fix css banner overlap

--- a/synk-client/src/app/pages/welcome/banners/sushi-banner/sushi-banner.component.scss
+++ b/synk-client/src/app/pages/welcome/banners/sushi-banner/sushi-banner.component.scss
@@ -6,11 +6,13 @@
     top: -10%;
     left: 0;
     height: 120%;
+    z-index: 3;
   }
   .right {
     position: absolute;
     right: -160px;
     height: 120%;
     top: -10%;
+    z-index: 2;
   }
 }
